--- a/app/views/associado/Edit-pre-cadastro.ejs
+++ b/app/views/associado/Edit-pre-cadastro.ejs
@@ -268,7 +268,7 @@
 																name="municipio">
 																<% for (var i = 0; i < itensEstados.length; i++) { %>
 																<% if (itensEstados[i].id != null ) { %>
-																<option id="estadoid" value="<%- itensEstados[i].id %>" <%= municipio == '<%= itensEstados[i].id %>' ? 'selected' : '' %>>
+																<option id="estadoid" value="<%= itensEstados[i].id %>">
 																	<%- itensEstados[i].nome %>
 																</option>
 																<% } %>
@@ -290,7 +290,7 @@
 															name="municipio_lotacao">
 															<% for (var i = 0; i < itensEstados.length; i++) { %>
 															<% if (itensEstados[i].id != null ) { %>
-															<option id="estadoid" value="<%- itensEstados[i].id %>" <%= municipio_lotacao == '<%= itensEstados[i].id %>' ? 'selected' : '' %>>
+															<option id="estadoid" value="<%= itensEstados[i].id %>">
 																<%- itensEstados[i].nome %>
 															</option>
 															<% } %>
@@ -302,7 +302,7 @@
 											<div class="col-sm-5">
 												<div class="input-group">
 													<div class="form-line">
-														Escola de Trabalho: <%= console.log(nome_escola) %>
+														Escola de Trabalho: 
 														<input type="text" class="form-control" id="nome_escola"
 															name="nome_escola" value="<%= nome_escola %>" required treatment="capitalize">
 													</div>
@@ -487,6 +487,8 @@
 
 	<script>
 		$('.toast').toast('show');
+		$('#municipio option[value=<%= municipio %>]').attr('selected','selected');
+		$('#municipio_lotacao option[value=<%= municipio_lotacao %>]').attr('selected','selected');
 	</script>
 	<!-- Jquery Core Js -->
 	<script src="/js/plugins/jquery/jquery.min.js"></script>
