--- a/app/views/associado/Edit-pre-cadastro.ejs
+++ b/app/views/associado/Edit-pre-cadastro.ejs
@@ -201,7 +201,8 @@
 														<select class="form-control show-tick" name="status"
 															id="status" required>
 															<option value="APROVAR" <%= status == 'APROVAR' ? 'selected' : '' %>>Aprovar</option>																		
-															<option value="PRE_CADASTRADO" <%= status == 'PRE_CADASTRADO' ? 'selected' : '' %>>Pré-Cadastrado</option>																		
+															<option value="PRE_CADASTRADO" <%= status == 'PRE_CADASTRADO' ? 'selected' : '' %>>Pré-Cadastrado</option>
+															<option value="AGUARDAR_DOCUMENTOS" <%= status == 'AGUARDAR_DOCUMENTOS' ? 'selected' : '' %>>Aguardando Documentos</option>																		
 														</select>
 													</div>
 												</div>
