--- a/app/views/associado/Edit.ejs
+++ b/app/views/associado/Edit.ejs
@@ -277,7 +277,7 @@
 																<% for (var i = 0; i < itensEstados.length; i++) { %>
 																<% if (itensEstados[i].id != null ) { %>
 																	<option id="estadoid" value="<%= itensEstados[i].id %>">
-																	<%- itensEstados[i].nome %>
+																	<%= itensEstados[i].nome %>
 																</option>
 																<% } %>
 																<% } %>
@@ -299,7 +299,7 @@
 															<% for (var i = 0; i < itensEstados.length; i++) { %>
 															<% if (itensEstados[i].id != null ) { %>
 															<option id="estadoid" value="<%= itensEstados[i].id %>">
-																<%- itensEstados[i].nome %>
+																<%= itensEstados[i].nome %>
 															</option>
 															<% } %>
 															<% } %>
