--- a/app/views/associado/Pre-cadastro.ejs
+++ b/app/views/associado/Pre-cadastro.ejs
@@ -131,6 +131,7 @@
 
 							<div class="body">
 								<div class="row clearfix">
+									<!--
 									<div class="col-sm-3" style="height: 39px;">
 										<div class="input-group" style="align-items: center; display: flex;">
 											Visualizar 
@@ -145,14 +146,16 @@
 											registros por página
 										</div>
 									</div>
+									
 									<div class="col-sm-3 right" style="height: 39px;">
 										<div class="input-group" style="display: inline-flex; align-items: center;">
 											Pesquisar:
 											<div style="margin-left: 8px;" class="form-line">
-												<input type="text" class="form-control" id="busca" onchange="buscaCandidato(this.value);">
+												<input type="text" class="form-control" id="busca" onchange="DataTable();">
 											</div>
 										</div>
 									</div>
+									-->
 								</div>
 								<div class="table-responsive">
 									<table id="dataTable"
@@ -193,6 +196,7 @@
 											<% } %>
 										</tbody>
 									</table>
+									<!--
 									<div class="align-right">
 										<nav>
 											<ul class="pagination" style="display: inline-flex;">
@@ -209,7 +213,8 @@
 												</li>
 											</ul>
 										</nav>
-									</div>									
+									</div>
+									-->									
 								</div>
 							</div>
 
@@ -291,8 +296,9 @@
 	<script src="/vendor/datatables/jquery.dataTables.min.js"></script>
 	<script src="/vendor/datatables/dataTables.bootstrap4.min.js"></script>
 
-	<!-- Page level custom scripts 
-	<script src="/js/demo/datatables-demo.js"></script> -->
+	<!-- Page level custom scripts -->
+	<script src="/js/demo/datatables-demo.js"></script> 
+	<!-- 
 	<script>
 		$('#page-posterior').click(function () {
 			document.getElementById("overlay").style.display = "block";
@@ -330,7 +336,7 @@
 		});
 
 	</script>
-
+	-->
 	<!-- Jquery Mask Js -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.11/jquery.mask.min.js"></script>
 
