corrigido redirecionamento ao cancelar edit associado.

--- a/app/views/associado/Edit.ejs
+++ b/app/views/associado/Edit.ejs
@@ -450,7 +450,7 @@
 									<div class="footer-card">
 										<input type="submit" value="Salvar"
 											class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm" />
-										<a href="/app/<%= page %>/list"
+										<a href="/app/<%= page %>/pre-cadastro"
 											class="d-none d-sm-inline-block btn btn-sm btn-danger shadow-sm">Cancelar</a>
 									</div>
 								</div>
