Retirado required de telefone residencial.

--- a/app/views/associado/Create.ejs
+++ b/app/views/associado/Create.ejs
@@ -160,8 +160,7 @@
 										<div class="input-group">
 											<div class="form-line">
 												Telefone Residencial:
-												<input type="text" class="form-control" id="tel_res" name="tel_res"
-													required>
+												<input type="text" class="form-control" id="tel_res" name="tel_res">
 											</div>
 										</div>
 									</div>									
