--- a/app/views/associado/List.ejs
+++ b/app/views/associado/List.ejs
@@ -17,7 +17,6 @@
 		href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
 		rel="stylesheet">
 
-
 	<!-- Google Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Roboto:400,700&subset=latin,cyrillic-ext" rel="stylesheet"
 		type="text/css">
@@ -123,8 +122,7 @@
 								<h2>Listagem de Associados</h2>								
 							</div>
 							<div class="body">
-								<div class="row clearfix">
-									<!--
+								<div class="row clearfix">									
 									<div class="col-sm-3" style="height: 39px;">
 										<div class="input-group" style="align-items: center; display: flex;">
 											Visualizar 
@@ -143,11 +141,10 @@
 										<div class="input-group" style="display: inline-flex; align-items: center;">
 											Pesquisar:
 											<div style="margin-left: 8px;" class="form-line">
-												<input type="text" class="form-control" id="busca" onchange="DataTable(this.value);">
+												<input style="margin-left: 8px;" type="text" class="form-control" id="busca" onchange="DataTable(this.value);">
 											</div>
 										</div>
-									</div>
-									-->
+									</div>									
 								</div>	
 								<div class="table-responsive">
 									<table id="dataTable"
@@ -195,8 +192,7 @@
                                             </tr>
                                             <% } %>
                                         </tbody>
-									</table>
-									<!--
+									</table>									
 									<div class="align-right">
 										<nav>
 											<ul class="pagination" style="display: inline-flex;">
@@ -213,8 +209,7 @@
 												</li>
 											</ul>
 										</nav>
-									</div>
-									-->										
+									</div>																			
 								</div>
 							</div>
 
@@ -290,9 +285,9 @@
 	<script src="/vendor/datatables/jquery.dataTables.min.js"></script>
 	<script src="/vendor/datatables/dataTables.bootstrap4.min.js"></script>
 
-	<!-- Page level custom scripts  -->
-	<script src="/js/demo/datatables-demo.js"></script> 
-	<!--
+	<!-- Page level custom scripts  
+	<script src="/js/demo/datatables-demo.js"></script> -->
+	
 	<script>
 		$('#page-posterior').click(function () {
 			document.getElementById("overlay").style.display = "block";
@@ -330,8 +325,6 @@
 		});
 
 	</script>
-	-->
-
 
 	<!-- Jquery Mask Js -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.11/jquery.mask.min.js"></script>
