--- a/app/views/associado/Pre-cadastro.ejs
+++ b/app/views/associado/Pre-cadastro.ejs
@@ -128,8 +128,7 @@
 							</div>
 
 							<div class="body">
-								<div class="row clearfix">
-									<!--
+								<div class="row clearfix">									
 									<div class="col-sm-3" style="height: 39px;">
 										<div class="input-group" style="align-items: center; display: flex;">
 											Visualizar 
@@ -149,11 +148,10 @@
 										<div class="input-group" style="display: inline-flex; align-items: center;">
 											Pesquisar:
 											<div style="margin-left: 8px;" class="form-line">
-												<input type="text" class="form-control" id="busca" onchange="DataTable();">
+												<input style="margin-left: 8px;" type="text" class="form-control" id="busca" onchange="DataTable();">
 											</div>
 										</div>
-									</div>
-									-->
+									</div>									
 								</div>
 								<div class="table-responsive">
 									<table id="dataTable"
@@ -193,8 +191,7 @@
 											</tr>
 											<% } %>
 										</tbody>
-									</table>
-									<!--
+									</table>									
 									<div class="align-right">
 										<nav>
 											<ul class="pagination" style="display: inline-flex;">
@@ -211,8 +208,7 @@
 												</li>
 											</ul>
 										</nav>
-									</div>
-									-->									
+									</div>																	
 								</div>
 							</div>
 
@@ -263,7 +259,6 @@
 
 	
 
-
 	<!-- Jquery Core Js -->
 	<script src="/js/plugins/jquery/jquery.min.js"></script>
 
@@ -291,9 +286,9 @@
 	<script src="/vendor/datatables/jquery.dataTables.min.js"></script>
 	<script src="/vendor/datatables/dataTables.bootstrap4.min.js"></script>
 
-	<!-- Page level custom scripts -->
-	<script src="/js/demo/datatables-demo.js"></script> 
-	<!-- 
+	<!-- Page level custom scripts 
+	<script src="/js/demo/datatables-demo.js"></script> -->
+	
 	<script>
 		$('#page-posterior').click(function () {
 			document.getElementById("overlay").style.display = "block";
@@ -331,7 +326,7 @@
 		});
 
 	</script>
-	-->
+	
 	<!-- Jquery Mask Js -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.11/jquery.mask.min.js"></script>
 
