--- a/app/views/usuario/List.ejs
+++ b/app/views/usuario/List.ejs
@@ -101,7 +101,7 @@
 							</a>
 						</div>
 						<div class="body">
-							<div class="row clearfix">
+							<!-- <div class="row clearfix">
 								<div class="col-sm-3" style="height: 39px;">
 									<div class="input-group" style="align-items: center; display: flex;">
 										Visualizar 
@@ -120,11 +120,11 @@
 									<div class="input-group" style="display: inline-flex; align-items: center;">
 										Pesquisar
 										<div class="form-line">
-											<input type="text" class="form-control" id="busca" onchange="buscaCandidato(this.value);">
+											<input style="margin-left: 8px;" type="text" class="form-control" id="busca" onchange="buscaCandidato(this.value);">
 										</div>
 									</div>
 								</div>
-							</div>
+							</div> -->
 							<div class="table-responsive">
 								<table id="dataTable" class="table table-bordered table-striped table-hover js-basic-example dataTable">
 									<thead>
@@ -173,7 +173,7 @@
 										<% } %>
 									</tbody>
 								</table>
-								<div class="align-right">
+								<!-- <div class="align-right">
 									<nav>
 										<ul class="pagination" style="display: inline-flex;">
 											<li id="page-anterior" data-page="0" class="page-item disabled">
@@ -189,14 +189,14 @@
 											</li>
 										</ul>
 									</nav>
-								</div>
+								</div> -->
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-		<div id="overlay">
+		<!-- <div id="overlay">
 			<div class="align-center">
 				<div class="row">
 					<div class="preloader" style="margin-top: 20%;">
@@ -214,7 +214,7 @@
 					<strong>Carregando usuários...</strong>
 				</div>
 			</div>
-		</div>
+		</div> -->
 	</section>
 
 	<!-- Logout Modal-->
@@ -267,9 +267,9 @@
 	<script src="/vendor/datatables/jquery.dataTables.min.js"></script>
 	<script src="/vendor/datatables/dataTables.bootstrap4.min.js"></script>
 
-	<!-- Page level custom scripts  
-	<script src="/js/demo/datatables-demo.js"></script> -->
-
+	<!-- Page level custom scripts  -->
+	<script src="/js/demo/datatables-demo.js"></script> 
+	<!--
 	<script>
 		$(document).ready(function () {
 			$("#btnExport").click(function () {
@@ -317,7 +317,7 @@
 			}
 		});		
 	</script>
-
+	-->
 	<!-- Jquery Mask Js -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.11/jquery.mask.min.js"></script>
 
