Correções de json e selected de municipio.

--- a/app/views/associado/Create.ejs
+++ b/app/views/associado/Create.ejs
@@ -168,7 +168,7 @@
 										<div class="input-group">
 											<div class="form-line">
 												Telefone Celular: *
-												<input type="text" class="form-control" id="celular" name="celular"
+												<input type="text" class="form-control" id="tel_cel" name="tel_cel"
 													maxlength="15" required>
 											</div>
 										</div>
