--- a/app/views/associado/Edit-pre-cadastro.ejs
+++ b/app/views/associado/Edit-pre-cadastro.ejs
@@ -269,7 +269,8 @@
 																name="municipio">
 																<% for (var i = 0; i < itensEstados.length; i++) { %>
 																<% if (itensEstados[i].id != null ) { %>
-																<option id="estadoid" value="<%= itensEstados[i].id %>">
+																<option id="municipio" value="<%= itensEstados[i].id %>"
+																	<%= itensEstados[i].id === municipio ? 'selected' : '' %>>
 																	<%- itensEstados[i].nome %>
 																</option>
 																<% } %>
@@ -291,7 +292,8 @@
 															name="municipio_lotacao">
 															<% for (var i = 0; i < itensEstados.length; i++) { %>
 															<% if (itensEstados[i].id != null ) { %>
-															<option id="estadoid" value="<%= itensEstados[i].id %>">
+															<option id="municipio_lotacao" value="<%= itensEstados[i].id %>"
+																<%= itensEstados[i].id === municipio_lotacao ? 'selected' : '' %>>
 																<%- itensEstados[i].nome %>
 															</option>
 															<% } %>
